change world per Authorization